[sdist]
formats=gztar

[bdist_wheel]
universal=1

[metadata]
name = bp-platform-utils
version      = attr: platform_utils.__version__
description = Cross-platform utilities for accomplishing some tasks that the stdlib is not equipped to provide.
;long-description = file: readme.rst
url = https://github.com/blindpandas/bp-platform_utils
author       = Blind Pandas Team (original: Christopher Toth<q@q-continuum.net>)
author-email = info@blindpandas.com
license      = MIT
keywords     = os path system
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Operating System :: OS Independent
  License :: OSI Approved :: MIT License
  Topic :: Software Development :: Libraries
  Natural Language :: English
  Programming Language :: Python :: 3

[options]
zip_safe = false
packages = find:
install_requires =
    pywin32==228;sys_platform=="win32"
    bp-winpaths==0.2;sys_platform=="win32"

[options.packages.find]
where=.
